# iArsenic2024

./: .gitignore  firebase.json
app/client/: .gitignore  global.d.ts  index.html  package-lock.json  package.json  tsconfig.json
app/client/src/: App.tsx
app/client/src/hooks/: useDropdownData.ts  useLanguage.ts  useRegionTranslations.ts  useUnits.ts  useUser.ts  useWells.ts
app/client/src/models/: index.ts  token.model.ts  user.model.ts
app/client/src/pages/: index.tsx
app/client/src/utils/: AccessTokenRepo.ts  isKnownError.ts  predictionToRiskFactor.ts  useWells.ts  validateNewPassword.ts
app/client/static/: index.html
app/migrations/: .gitignore  exportFirestoreToJson.ts  importJsonToBigQuery.ts  package-lock.json  package.json
app/migrations/dbUtils/: firestoreToJson.ts
app/server/: package-lock.json  package.json
app/server/iArsenic API/: delete self user.bru  get self user.bru  get self well.bru  get users.bru  get wells.bru  healthcheck.bru  login.bru  query wells.bru  register.bru  self generate prediction.bru  update well.bru
app/server/iArsenic API/environments/: localhost.bru  production.bru  staging.bru
app/server/src/: index.ts
app/server/src/server/: db.ts  errors.ts  (+1 more)
experiments/BGDEstimates/: .gitignore  script.py
experiments/BGDEstimates/vgqdEstimates/: binary_cm.py  script.py
firebase-functions/: .gitignore  package-lock.json  package.json
preprocessing/: .gitignore
preprocessing/cli/: csv-to-json.js
preprocessing/dphe-contact-list/: dpheUpazilaUrls.csv  pyproject.toml  script.py
preprocessing/models/: .gitignore
(+138 files in other folders)
